docs: update project content and remove institution reference

--- a/index.html
+++ b/index.html
@@ -1,1 +1,24 @@
-<h1>Miuul Frontend</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>One Page Frontend Project</title>
+</head>
+<body>
+
+  <h1>One Page Frontend Project</h1>
+  <p>This page is created to practice HTML5 and Git workflow.</p>
+
+  <h2>Topics</h2>
+  <ul>
+    <li>HTML Structure</li>
+    <li>Git Commit & Branch</li>
+    <li>Project Versioning</li>
+  </ul>
+
+  <footer>
+    <p>Created by AKG</p>
+  </footer>
+
+</body>
+</html>
